서치 검색 기능 개발 : mybatis 조건 검색 개발중

--- a/publicParking/src/main/resources/application.yml
+++ b/publicParking/src/main/resources/application.yml
@@ -8,11 +8,10 @@ server:
     port: 8087
 spring:
     datasource:
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        password: lesm1serab1e
         url: jdbc:mysql://relearn.cqaoehsuwhpj.ap-northeast-2.rds.amazonaws.com:3306/study
+        driver-class-name: com.mysql.cj.jdbc.Driver
         username: relearn
-        
+        password: lesm1serab1e       
     mvc:
         hiddenmethod:
             filter:
@@ -20,3 +19,6 @@ spring:
         view:
             prefix: /WEB-INF/jsp/
             suffix: .jsp
+
+mybatis:
+  mapper-locations: classpath:teamD/publicParking/search/mapper/*.xml
