검색 서비스 백단 구현, 예외 처리 적용

--- a/publicParking/src/main/resources/application.yml
+++ b/publicParking/src/main/resources/application.yml
@@ -1,9 +1,12 @@
 logging:
-    level:
-        org:
-            springframework:
-                web:
-                    filter: debug
+  level:
+    org:
+      springframework:
+        web:
+          filter: debug
+    teamD:
+      publicParking: debug
+    
 server:
     port: 8087
 spring:
