--- a/publicParking/src/main/resources/application.yml
+++ b/publicParking/src/main/resources/application.yml
@@ -22,6 +22,13 @@ spring:
         view:
             prefix: /WEB-INF/jsp/
             suffix: .jsp
+    jpa:
+      database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+      open-in-view: false
+      show-sql: true
+      hibernate:
+        format_sql: true
+        ddl-auto: create
 
 mybatis:
   mapper-locations: classpath:teamD/publicParking/search/mapper/*.xml
